perf: run worker threads on virtual threads